cabal-version:       3.8
name:                pact-core
version:             0.1
-- ^ 4 digit is prerelease, 3- or 2-digit for prod release
synopsis:            Smart contract language library and REPL
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact-core>.
homepage:            https://github.com/kadena-io/pact-core
bug-reports:         https://github.com/kadena-io/pact-core/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jose Cardona
maintainer:          jose@kadena.io
copyright:           Copyright (C) 2022 Kadena
category:            Language
build-type:          Simple

common pact-core-common
  build-depends:
    , Decimal
    , base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , lens
    , mtl
    , pact-time
    , prettyprinter
    , prettyprinter-ansi-terminal
    , transformers
    , text
    , vector
    , vector-algorithms
    , megaparsec
    , cryptonite
    , memory
    , safe-exceptions
    , statistics
    , ralist >= 0.4.0.0
    , primitive
    , haskeline
    , semirings
    , exceptions
    , array

  ghc-options: -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options: -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    ViewPatterns
    LambdaCase
    TupleSections
    BangPatterns
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    NumericUnderscores
    TypeOperators

library
  import: pact-core-common
  hs-source-dirs: pact-core
  build-tool-depends:
    , alex:alex
    , happy:happy
  -- ghc-options: -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  -- ghc-prof-options: -fprof-auto -fprof-auto-calls
  -- default-language:    Haskell2010
  -- default-extensions:
  --   OverloadedStrings
  --   ViewPatterns
  --   LambdaCase
  --   TupleSections
  --   BangPatterns
  --   ScopedTypeVariables
  --   FlexibleContexts
  --   FlexibleInstances

  exposed-modules:
    Pact.Core.Compile
    Pact.Core.Builtin
    Pact.Core.Names
    Pact.Core.Literal
    Pact.Core.Guards
    Pact.Core.Imports
    Pact.Core.Pacts.Types
    Pact.Core.Hash
    Pact.Core.Type
    Pact.Core.Pretty
    Pact.Core.Gas
    Pact.Core.Info
    Pact.Core.Errors
    Pact.Core.Persistence
    Pact.Core.PactValue
    Pact.Core.Debug
    Pact.Core.Capabilities
    Pact.Core.ModRefs

     -- Syntax modules
    Pact.Core.Syntax.ParseTree
    Pact.Core.Syntax.Lexer
    Pact.Core.Syntax.LexUtils
    Pact.Core.Syntax.Parser
    -- Pact.Core.Repl

    -- Core IR modules
    Pact.Core.IR.Term
    Pact.Core.IR.Desugar

    -- Core IR Evaluator modules
    Pact.Core.IR.Eval.Runtime
    Pact.Core.IR.Eval.Runtime.Types
    Pact.Core.IR.Eval.Runtime.Utils
    Pact.Core.IR.Eval.CEK
    Pact.Core.IR.Eval.RawBuiltin

    -- Pact.Core.Untyped.Eval.Builtin

    -- Repl
    Pact.Core.Repl.Utils
    Pact.Core.Repl.Runtime
    Pact.Core.Repl.Runtime.ReplBuiltin
    Pact.Core.Repl.Compile

library typed-core
  import: pact-core-common
  hs-source-dirs: typed-core

  build-depends:
    , pact-core

  exposed-modules:
    -- Typed core typecheck
    Pact.Core.IR.Typecheck

    -- Typed core modules
    Pact.Core.Typed.Typecheck
    Pact.Core.Typed.Term
    Pact.Core.Typed.Overload

    -- Untyped core
    Pact.Core.Untyped.Term
    Pact.Core.Untyped.Eval.Runtime
    Pact.Core.Untyped.Eval.CEK
    Pact.Core.Untyped.Eval.Runtime.CoreBuiltin
    Pact.Core.Untyped.Eval.Runtime.RawBuiltin
    Pact.Core.Untyped.Utils


executable repl
  main-is: pact-core/Pact/Core/Repl.hs

  build-depends:
    , Decimal
    , base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , lens
    , mtl
    , pact-time
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , text
    , unordered-containers
    , utf8-string
    , vector
    , megaparsec
    , pact-core
    , ralist
    , primitive
    , haskeline
    , exceptions

  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010


test-suite core-tests
  main-is:          PactCoreTests.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   pact-core-tests
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  default-extensions:
    OverloadedStrings
    ViewPatterns
    LambdaCase
    TupleSections
    BangPatterns
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances

  build-depends:
    , aeson
    , attoparsec
    , base
    , bound
    , bytestring
    , containers
    , data-default
    , unordered-containers
    , Decimal
    , QuickCheck
    , deepseq
    , directory
    , exceptions
    , hedgehog
    , base16-bytestring
    , directory
    , filepath
    , lens
    , mtl
    , text
    , transformers
    , pact-core
    , prettyprinter
    , vector
    , tasty
    , tasty-hunit
    , tasty-hedgehog

  other-modules:
    , Pact.Core.Test.ReplTests
    , Pact.Core.Test.LexerParserTests
    , Pact.Core.Test.LexerTests
