cabal-version:       3.8
name:                pact-core
version:             0.1
-- ^ 4 digit is prerelease, 3- or 2-digit for prod release
synopsis:            Smart contract language library and REPL
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact-core>.
homepage:            https://github.com/kadena-io/pact-core
bug-reports:         https://github.com/kadena-io/pact-core/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jose Cardona
maintainer:          jose@kadena.io
copyright:           Copyright (C) 2022 Kadena
category:            Language
build-type:          Simple

extra-source-files:
    cbits/musl/libm.h
    cbits/musl/endian.h
    cbits/musl/exp_data.h
    cbits/musl/log_data.h
    cbits/musl/pow_data.h
    cbits/musl/sqrt_data.h

common pact-core-common
  build-depends:
    , Decimal
    , attoparsec
    , base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , lens
    , mtl
    , pact-json
    , pact-time
    , parsers
    , prettyprinter
    , prettyprinter-ansi-terminal
    , transformers
    , text
    , vector
    , vector-algorithms
    , megaparsec
    , cryptonite
    , memory
    , safe-exceptions
    , statistics
    , ralist >= 0.4.0.0
    , primitive
    , haskeline
    , semirings
    , utf8-string
    , exceptions
    , array
    , pact-json
    , scientific
    , unordered-containers
    , groups
    , poly
    , mod

  ghc-options: -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options: -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    ViewPatterns
    LambdaCase
    TupleSections
    BangPatterns
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    NumericUnderscores
    TypeOperators

library
  import: pact-core-common
  hs-source-dirs: pact-core
  build-tool-depends:
    , alex:alex
    , happy:happy

  c-sources:
    cbits/musl/__math_invalid.c
    cbits/musl/__math_divzero.c
    cbits/musl/__math_oflow.c
    cbits/musl/__math_uflow.c
    cbits/musl/__math_xflow.c
    cbits/musl/exp.c
    cbits/musl/exp_data.c
    cbits/musl/log.c
    cbits/musl/log_data.c
    cbits/musl/pow.c
    cbits/musl/pow_data.c
    cbits/musl/sqrt.c
    cbits/musl/sqrt_data.c

  exposed-modules:
    Pact.Core.Compile
    Pact.Core.Builtin
    Pact.Core.Names
    Pact.Core.Literal
    Pact.Core.Guards
    Pact.Core.Imports
    Pact.Core.DefPacts.Types
    Pact.Core.Hash
    Pact.Core.Type
    Pact.Core.Pretty
    Pact.Core.Gas
    Pact.Core.Info
    Pact.Core.Errors
    Pact.Core.Persistence
    Pact.Core.PactValue
    Pact.Core.Debug
    Pact.Core.Capabilities
    Pact.Core.ModRefs
    Pact.Core.Interpreter
    Pact.Core.ChainData
    Pact.Core.Environment
    Pact.Core.Environment.Utils
    Pact.Core.Environment.Types
    Pact.Core.StableEncoding
    Pact.Core.Principal
    Pact.Core.Namespace
    Pact.Core.RuntimeParsers
    Pact.Core.Pairing

     -- Syntax modules
    Pact.Core.Syntax.ParseTree
    Pact.Core.Syntax.Lexer
    Pact.Core.Syntax.LexUtils
    Pact.Core.Syntax.Parser

    -- Core IR modules
    Pact.Core.IR.Term
    Pact.Core.IR.Desugar

    -- Core IR Evaluator modules
    Pact.Core.IR.Eval.Runtime
    Pact.Core.IR.Eval.Runtime.Types
    Pact.Core.IR.Eval.Runtime.Utils
    Pact.Core.IR.Eval.CEK
    Pact.Core.IR.Eval.RawBuiltin
    Pact.Core.IR.ModuleHashing
    Pact.Core.IR.ConstEval

    Pact.Core.Trans.TOps

    -- Repl
    Pact.Core.Repl.Utils
    Pact.Core.Repl.Runtime.ReplBuiltin
    Pact.Core.Repl.Compile

library typed-core
  import: pact-core-common
  hs-source-dirs: typed-core

  build-depends:
    , pact-core

  exposed-modules:
    -- Typed core typecheck
    Pact.Core.IR.Typecheck

    -- Typed core modules
    Pact.Core.Typed.Typecheck
    Pact.Core.Typed.Term
    Pact.Core.Typed.Overload

    -- Untyped core
    Pact.Core.Untyped.Term
    Pact.Core.Untyped.Eval.Runtime
    Pact.Core.Untyped.Eval.CEK
    Pact.Core.Untyped.Eval.Runtime.CoreBuiltin
    Pact.Core.Untyped.Eval.Runtime.RawBuiltin
    Pact.Core.Untyped.Utils


executable repl
  main-is: pact-core/Pact/Core/Repl.hs

  build-depends:
    , Decimal
    , base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , lens
    , mtl
    , pact-time
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , text
    , unordered-containers
    , utf8-string
    , vector
    , megaparsec
    , pact-core
    , ralist
    , primitive
    , haskeline
    , exceptions

  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010


test-suite core-tests
  main-is:          PactCoreTests.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   pact-core-tests
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  default-extensions:
    OverloadedStrings
    ViewPatterns
    LambdaCase
    TupleSections
    BangPatterns
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances

  build-depends:
    , aeson
    , attoparsec
    , base
    , bound
    , bytestring
    , containers
    , data-default
    , Decimal
    , QuickCheck
    , deepseq
    , directory
    , exceptions
    , hedgehog
    , base16-bytestring
    , directory
    , filepath
    , lens
    , mtl
    , text
    , transformers
    , pact-core
    , prettyprinter
    , vector
    , tasty
    , tasty-hunit
    , tasty-hedgehog

  other-modules:
    , Pact.Core.Test.ReplTests
    , Pact.Core.Test.LexerParserTests
    , Pact.Core.Test.LexerTests
